--- a/creditcarddesign/src/main/res/layout/front_card.xml
+++ b/creditcarddesign/src/main/res/layout/front_card.xml
@@ -3,8 +3,7 @@
     android:id="@+id/front_card_container"
     android:layout_width="300dp"
     android:layout_height="180dp"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/front_card_number"
@@ -19,10 +18,7 @@
         android:shadowRadius="2"
         android:textColor="@android:color/white"
         android:textColorHint="@color/semi_white"
-        android:textSize="@dimen/text_size_normal"
-
-
-        />
+        android:textSize="@dimen/text_size_normal" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -63,8 +59,6 @@
                 android:shadowRadius="2"
                 android:textColor="@android:color/white"
                 android:textColorHint="@color/semi_white" />
-
-
         </LinearLayout>
 
 
