--- a/creditcarddesign/src/main/res/layout/front_card_outline.xml
+++ b/creditcarddesign/src/main/res/layout/front_card_outline.xml
@@ -20,6 +20,12 @@
             android:layout_height="@dimen/inner_chip_height_normal"
             android:layout_gravity="center"
             android:background="@drawable/chip_inner" />
+
+        <ImageView
+            android:id="@+id/qr_code_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
     </FrameLayout>
 
     <ImageView
