--- a/creditcarddesign/src/main/res/layout/lyt_card_holder_name.xml
+++ b/creditcarddesign/src/main/res/layout/lyt_card_holder_name.xml
@@ -6,8 +6,7 @@
     android:orientation="vertical"
     android:padding="@dimen/padding_small">
 
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_small"
@@ -23,15 +22,10 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="@dimen/padding_large">
-
-
-            <TextView
+           <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/name_on_card"
-
-                />
-
+                android:text="@string/name_on_card" />
 
             <EditText
                 android:id="@+id/card_name"
@@ -42,7 +36,6 @@
                 android:inputType="textCapCharacters|textPersonName"
                 android:maxLength="16"
                 android:text="" />
-
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
