--- a/creditcarddesign/src/main/res/layout/lyt_card_number.xml
+++ b/creditcarddesign/src/main/res/layout/lyt_card_number.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:padding="@dimen/padding_small">
 
     <android.support.v7.widget.CardView
@@ -12,8 +11,8 @@
         android:layout_margin="@dimen/margin_small"
         android:orientation="vertical"
         android:padding="@dimen/margin_small"
-        app:cardCornerRadius="@dimen/card_radius"
         app:cardBackgroundColor="@android:color/white"
+        app:cardCornerRadius="@dimen/card_radius"
         app:cardElevation="@dimen/cardview_default_elevation"
         app:cardPreventCornerOverlap="false">
 
@@ -23,14 +22,10 @@
             android:orientation="vertical"
             android:padding="@dimen/padding_large">
 
-
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/card_number"
-
-                />
-
+                android:text="@string/card_number" />
 
             <EditText
                 android:id="@+id/card_number_field"
@@ -39,9 +34,22 @@
                 android:layout_marginTop="@dimen/margin_small"
                 android:hint="XXXX XXXX XXXX XXXX"
                 android:inputType="number"
-                android:maxLength="19"
+                android:maxLength="35"
                 android:text="" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
-</LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/action_paste"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="20dp"
+        app:elevation="6dp"
+        app:fabSize="normal"
+        app:pressedTranslationZ="5dp"
+        app:srcCompat="@drawable/ic_action_paste" />
+
+</RelativeLayout>
